--- a/iasa/_config.yml
+++ b/iasa/_config.yml
@@ -1,1 +1,5 @@
+title : IASA Website
+author : Eric Willis
+baseurl : https://bilbo-swaggins.github.io/iasa-jekyll
 markdown: rdiscount
+markdown: kramdown
